--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="fMarginAuto fLandWrapper">
         
-        <div class="fMenu fPos-Fixed">
+        <div class="fMenu fPos-Abs">
             <div class="fMenu-Choice fActive fTextAlign-C" data-event="Fruit">
                 <span class="fDis-Block fMenu-Choice-Image" data-image="fruit"></span>
                 <span class="fMenu-Choice-Label">Фрукты</span>
