--- a/extra/static/fruit-template/css/fruit.css
+++ b/extra/static/fruit-template/css/fruit.css
@@ -27,6 +27,9 @@ body{
 .fTextAlign-C{
     text-align: center;
 }
+.fTextAlign-L{
+    text-align: left;
+}
 .fMarginAuto{
     margin: 0 auto;
 }
@@ -276,6 +279,9 @@ body{
     overflow: hidden;
     padding-left: 10px;
 }
+.fOrderTable-Obj:hover{
+    background: url(../images/ordertable-obj-active-bg.png);
+}
 .fOrderTable-Obj.fActive{
     background: url(../images/ordertable-obj-active-bg.png);
 }
@@ -302,16 +308,24 @@ body{
     height: 14px;
     vertical-align: middle;
     margin-left: 5px;
+    display: none;
+}
+.fOrderTable-Obj:hover [data-event="cancel"],
+.fOrderTable-Obj:hover [data-event="minus"],
+.fOrderTable-Obj:hover [data-event="plus"]{
+    display: inline-block;
+}
+[data-event="minus"],
+[data-event="plus"]{
+    font: 700 16px / 36px Intro;
+    vertical-align: middle;
+    display: none;
 }
 [data-event="minus"]{
     color: #ff4343;
-    font: 700 16px / 36px Intro;
-    vertical-align: middle;
 }
 [data-event="plus"]{
     color: #99cc33;
-    font: 700 16px / 36px Intro;
-    vertical-align: middle;
 }
 .fOrder-Line{
     height: 1px;
