--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <div class="fTest">
     <div class="fMarginAuto fLandWrapper">
         
         <div class="fMenu fPos-Fixed">
@@ -39,11 +40,7 @@
         </div>
         
         <div class="fLandHeader">
-            <div class="fLandHeader">
-                <span class="fDis-Block fPos-Rel fLandLogo fMarginAuto"></span>
-                <span class="fDis-Block fPos-Rel fLandHeader-H1"></span>
-                <span class="fDis-Block fPos-Rel fLandHeader-BagShadow"></span>
-            </div>
+              <span class="fDis-Block fPos-Rel fLandLogo fMarginAuto"></span>
         </div>
         
         <div class="fLandMiddle">
@@ -254,6 +251,8 @@
             
         </div>
         
+        <!--</div>-->
+    </div>
     </div>
     
     <script>
