--- a/extra/static/fruit-template/css/fruit.css
+++ b/extra/static/fruit-template/css/fruit.css
@@ -81,7 +81,7 @@ body{
 }
 .fLineFont{
     color: #ffffff;
-    font: 700 100px / 175px Intro-Caps;
+    font: 700 100px / 152px Intro-Caps;
 }
 .fLandLine-1{
     top: 130px;
@@ -159,6 +159,7 @@ body{
 }
 .fObj-Price-B{
     font: 700 25px / 19px Intro-Bold;
+    display: block;
 }
 .fObj-Price-B.fActive{
     font: 700 20px / 19px Intro-Bold;
@@ -544,7 +545,17 @@ body{
 }
 .fLand-H1{
     font: 700 37px Intro-Caps;
-    top: 390px;
+    top: 380px;
     left: 500px;
     color: rgba(102, 53, 27, 0.86);
+}
+.fDis-Table{
+    display: table;
+}
+.fDis-Table > *{
+    /*display: table-cell;*/
+}
+.fCenter-Abs{
+    top: 50%;
+    left: 50%;
 }
