--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -47,7 +47,7 @@
         <div class="fLandMiddle">
             
             <div data-content="menuFruit" class="fLandLine fPos-Rel fLandLine-1 fLineFont">
-                <div class="fWrapper-976PX fMarginAuto">
+                <div class="fWrapper-976PX fMarginAuto fDis-Table fPos-Abs fCenter-Abs" style="margin-top: -76px; margin-left: -488px;">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="fruit"></span>
                     <span>Фрукты</span>
                 </div>
@@ -89,7 +89,7 @@
             </div>
             
             <div data-content="menuNut" class="fLandLine fPos-Rel fLandLine-2 fLineFont">
-                <div class="fWrapper-976PX fMarginAuto">
+                <div class="fWrapper-976PX fMarginAuto fDis-Table fPos-Abs fCenter-Abs" style="margin-top: -76px; margin-left: -488px;">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="nut"></span>
                     <span>Орехи</span>
                 </div>
@@ -132,7 +132,7 @@
             </div>
             
             <div data-content="menuBag" class="fLandLine fPos-Rel fLandLine-2 fLineFont">
-                <div class="fMarginAuto" style="width:1006px;">
+                <div class="fMarginAuto fDis-Table fPos-Abs fCenter-Abs" style="width: 1006px; margin-top: -76px; margin-left: -503px;">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="bag"></span>
                     <span>Ваша корзина</span>
                 </div>
