--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -134,9 +134,9 @@
             </div>
             
             <div data-content="menuBag" class="fLandLine fPos-Rel fLandLine-2 fLineFont">
-                <div class="fMarginAuto fDis-Table fPos-Abs fCenter-Abs" style="width: 1006px; margin-top: -76px; margin-left: -503px;">
+                <div class="fMarginAuto fDis-Table fPos-Abs fCenter-Abs " style="margin-top: -76px; margin-left: -25%;">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="bag"></span>
-                    <span>Ваша корзина</span>
+                    <span class="fMenuBag-Media">Ваша</span> <span>корзина</span>
                 </div>
             </div>
             
