--- a/extra/static/fruit-template/css/fruit.css
+++ b/extra/static/fruit-template/css/fruit.css
@@ -567,7 +567,7 @@ body{
     display: table;
 }
 .fDis-Table > *{
-    /*display: table-cell;*/
+    display: table-cell;
 }
 .fCenter-Abs{
     top: 50%;
