--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -50,7 +50,7 @@
             
             <div data-content="menuFruit" class="fLandLine fPos-Rel fLandLine-1 fLineFont">
                 <div class="fWrapper-976PX fWrapper-976PX-LandLine fMarginAuto fDis-Table fPos-Abs fCenter-Abs">
-                    <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="fruit"></span>
+                    <span class="fDis-Inline fLineIcon fVertAlign-Mid fFloat-L" data-image="fruit"></span>
                     <span>Фрукты</span>
                 </div>
             </div>
@@ -92,9 +92,10 @@
             
             <div data-content="menuNut" class="fLandLine fPos-Rel fLandLine-2 fLineFont">
                 <div class="fWrapper-976PX fWrapper-976PX-LandLine fMarginAuto fDis-Table fPos-Abs fCenter-Abs">
-                    <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="nut"></span>
-                    <span>Орехи</span>
+                    <span class="fDis-Inline fLineIcon fVertAlign-Mid fFloat-L" data-image="nut"></span>
+                    <span style="">Орехи</span>
                 </div>
+                <div class="fClear"></div>
             </div>
             
              <div data-content="Nut">
@@ -135,7 +136,7 @@
             
             <div data-content="menuBag" class="fLandLine fPos-Rel fLandLine-2 fLineFont">
                 <div class="fMarginAuto fDis-Table fPos-Abs fCenter-Abs " style="margin-top: -76px; margin-left: -25%;">
-                    <span class="fDis-Inline fLineIcon fVertAlign-Mid" data-image="bag"></span>
+                    <span class="fDis-Inline fLineIcon fVertAlign-Mid fFloat-L" data-image="bag"></span>
                     <span class="fMenuBag-Media">Ваша</span><span> корзина</span>
                 </div>
             </div>
