--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -52,6 +52,7 @@
                 <div class="fWrapper-976PX fWrapper-976PX-LandLine fMarginAuto fDis-Table fPos-Abs fCenter-Abs">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid fFloat-L" data-image="fruit"></span>
                     <span>Фрукты</span>
+                    <div class="fClear"></div>
                 </div>
             </div>
             
@@ -94,8 +95,8 @@
                 <div class="fWrapper-976PX fWrapper-976PX-LandLine fMarginAuto fDis-Table fPos-Abs fCenter-Abs">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid fFloat-L" data-image="nut"></span>
                     <span style="">Орехи</span>
+                    <div class="fClear"></div>
                 </div>
-                <div class="fClear"></div>
             </div>
             
              <div data-content="Nut">
@@ -137,7 +138,8 @@
             <div data-content="menuBag" class="fLandLine fPos-Rel fLandLine-2 fLineFont">
                 <div class="fMarginAuto fDis-Table fPos-Abs fCenter-Abs " style="margin-top: -76px; margin-left: -25%;">
                     <span class="fDis-Inline fLineIcon fVertAlign-Mid fFloat-L" data-image="bag"></span>
-                    <span class="fMenuBag-Media">Ваша</span><span> корзина</span>
+                    <span class="fMenuBag-Media">Ваша</span><span> Корзина</span>
+                    <div class="fClear"></div>
                 </div>
             </div>
             
